bpo-37603: tok_nextc() now also updates multi_line_start on REALLOC()

Fix Python parser crash: when the tokenizer grows its internal buffer
using REALLOC(), update also tok->multi_line_start.